--- a/code/version 1.0/src/package.json
+++ b/code/version 1.0/src/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2"
   }
 }
