--- a/code/version 1.0/src/package.json
+++ b/code/version 1.0/src/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "vite": "^4.4.5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
