--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /code/version 1.0/src/.vscode
 /code/version 1.0/src/node_modules
+/code/version 2.0/src/.vscode
+/code/version 2.0/src/node_modules
