--- a/code/version 2.0/src/package.json
+++ b/code/version 2.0/src/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "sweetalert2": "^11.10.2"
   },
   "jest": {
     "testEnvironment": "node"
