feat: pruebas unitarias v2.0, y Casos de prueba y lista de defectos (md) v2.0

--- a/code/version 2.0/src/package.json
+++ b/code/version 2.0/src/package.json
@@ -20,5 +20,13 @@
   },
   "jest": {
     "testEnvironment": "node"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
