fix: Folders distribution and build fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /code/version 1.0/src/.vscode
 /code/version 1.0/src/node_modules
 /code/version 2.0/src/.vscode
-/code/version 2.0/src/node_modules
+/code/version 2.0/node_modules
+/code/version 2.0/dist
