--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /code/version 2.0/src/.vscode
 /code/version 2.0/node_modules
 /code/version 2.0/dist
+/code/version 3.0/src/.vscode
+/code/version 3.0/node_modules
+/code/version 3.0/dist
