--- a/code/version 3.0/package.json
+++ b/code/version 3.0/package.json
@@ -4,30 +4,31 @@
     "version": "2.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview",
-      "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "devDependencies": {
-      "jest": "^29.7.0",
-      "vite": "^4.4.5"
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "vite": "^4.4.5"
     },
     "dependencies": {
-      "@fortawesome/fontawesome-free": "^6.5.1",
-      "bootstrap": "^5.3.2",
-      "sweetalert2": "^11.10.2"
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "bootstrap": "^5.3.2",
+        "jsdom": "^24.0.0",
+        "sweetalert2": "^11.10.2"
     },
     "jest": {
-      "testEnvironment": "node"
+        "testEnvironment": "jest-environment-jsdom"
     },
     "main": "vite.config.js",
     "directories": {
-      "test": "tests"
+        "test": "tests"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": ""
-  }
-  
+}
